--- a/templates/platform.html
+++ b/templates/platform.html
@@ -96,7 +96,7 @@
 
     <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">MLOps</h1>
+        <h1 class="display-5 fw-bold">Service</h1>
         <p class="col-md-8 fs-4">Deploy your model and provide service.</p>
         <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href='./service';">Try it!</button>
       </div>
