Update UI:remove Data transformation and the button bring user from data to model. Add a select data button in Model Pipeline

--- a/templates/data.html
+++ b/templates/data.html
@@ -96,33 +96,24 @@
         <h1 class="display-6 fw-bold">Data Pipeline</h1>
         <p class="col-md-8 fs-5">Define your own data.</p>
         <br><br>
-        <button class="btn btn-primary btn-lg" type="button">Upload files to Database</button>
+        <button class="btn btn-primary btn-lg" type="button">Upload x attributes to Buffer</button>
         <br>
-        <text>Upload csv / xlsx file from local directory to Database in server.</text>
+        <text>Upload x attributes in the csv format from local directory to Buffer.</text>
         <br><br>
-        <button class="btn btn-primary btn-lg" type="button">Select File from Database to UI</button>
+        <button class="btn btn-primary btn-lg" type="button">Upload y attributes to Buffer</button>
         <br>
-        <text>Select table from Database to this page for checking.</text>
+        <text>Upload y attributes in the csv format from local directory to Buffer.</text>
         <br><br>
-        <button class="btn btn-primary btn-lg" type="button" disabled>Select Data Cleaning Rules</button>
-        <br><br>
-        <button class="btn btn-primary btn-lg" type="button" disabled>Select Data Transformation Rules</button>
-        <br><br>
-        <button class="btn btn-primary btn-lg" type="button" disabled>Select Feature Engineering Rules</button> 
+        <!-- <a href="./model" class="btn btn-primary btn-lg">Save File to Server</a> -->
+        <button class="btn btn-primary btn-lg" type="button">Save File to Server</button>
         <br>
-        <text>Define X and Y. Also the training data, validating data, testing data. Feature Engineering Rules could include the already-written code. Or could define by user.</text>
-        <br><br>
-        <a href="./model" class="btn btn-primary btn-lg">Apply File to Model Pipeline</a>
-        <!-- <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href='';">Apply File to Model Pipeline</button> -->
-        <text>This button would Save file to Database and wait for the latter Model training.</text>
+        <text>Save file from Buffer to Server in a directory.</text>
         <br><br>
         <!-- <p class="col-md-8 fs-5">Data Cleaning Rules</p>
         <p class="col-md-8 fs-5">Data Transformation Rules</p>
         <p class="col-md-8 fs-5">Data Featuring Rules</p> -->
       </div>
     </div>
-
-
 
     <footer class="pt-3 mt-4 text-muted border-top">
       © 2022
