--- a/templates/model.html
+++ b/templates/model.html
@@ -115,13 +115,19 @@
     <div class="p-5 mb-1 bg-light rounded-3">
       <div class="container-fluid py-0">
         <h1 class="display-6 fw-bold">Model Pipeline</h1>
-        <p class="col-md-8 fs-5">Define your own Model and train.</p>
+        <p class="col-md-8 fs-5">Define your own Model and train.</p> 
         <br><br>
-        <text><b>Current data file from Data Pipeline. : {...}</b></text>
-        <br><br>
-        <button class="btn btn-primary btn-lg" type="button">Select Module from Repository</button> 
+        <button class="btn btn-primary btn-lg" type="button">Select Data directory from Server</button> 
         <br>
-        <text>Initializing, Selecting, Matching, Reorganizing, Cramming. (Including various kind of model, such as: bibo, biro, ribo, riro)</text>
+        <text>Select the data file which will be used to train model.</text>
+        <br><br>
+        <text><b>Current x attributes file from Data Pipeline. : {...}</b></text>
+        <br>
+        <text><b>Current y attributes file from Data Pipeline. : {...}</b></text>
+        <br><br>
+        <button class="btn btn-primary btn-lg" type="button">Select Model from Repository</button> 
+        <br>
+        <text>Including various kind of model, such as: bibo, biro, ribo, riro. <br>Each one has a completed module process, such as Initializing, Selecting, Matching, Reorganizing, Cramming.</text>
         <br><br>
         <button class="btn btn-primary btn-lg" type="button">Select Hyperparameters</button>
         <br>
