--- a/templates/service.html
+++ b/templates/service.html
@@ -116,16 +116,16 @@
 
     <div class="p-5 mb-1 bg-light rounded-3">
       <div class="container-fluid py-0">
-        <h1 class="display-6 fw-bold">MLOps & Service</h1>
+        <h1 class="display-6 fw-bold">Service</h1>
         <p class="col-md-8 fs-5">Deploy your model and provide service.</p>
         <br><br>
         <button class="btn btn-primary btn-lg" type="button">Deploy Model from Registry</button> 
         <br>
         <text>Select a model from Model Registry and deploy the service. <b>Current model for service. : {...}</b></text>
         <br><br>
-        <button class="btn btn-primary btn-lg" type="button">Select Data from Database</button> 
+        <button class="btn btn-primary btn-lg" type="button">Select Data from Server</button> 
         <br>
-        <text>Select data from Database to inference. <b>Current data file from Data Pipeline. : {...}</b></text>
+        <text>Select data from Server to inference. <b>Current data file from Data Pipeline. : {...}</b></text>
         <br><br>
         <button class="btn btn-primary btn-lg" type="button">Start inferencing</button>
         <br>
