--- a/templates/service.html
+++ b/templates/service.html
@@ -193,7 +193,7 @@
           <br><br><br><br><br><br><br><br>
           <label class="col-md-8 fs-4">Save configuration and Performace.</label>
           <label for="save_configuration_performance" class="btn btn-primary btn-lg">Save</label>
-          <input type="submit" id="save_configuration_performance" class="btn btn-primary btn-lg" hidden>
+          <input type="submit" id="save_configuration_performance" class="btn btn-primary btn-lg" formaction="/save/service" hidden>
           <br><br>
           <text>After inferencing completed, this save mechanism will execute automatically.</text>
         </form>
