app資料夾改名為apps，因為與app.py撞名，hj/6

--- a/templates/model.html
+++ b/templates/model.html
@@ -185,7 +185,7 @@
           <br><br>
           <text><b>Training accuracy : <font color="blue">{{trainingAccuracy}}</font></b></text>
           <br>
-          <text><b>Validating accuracy : <font color="blue">{{0.97}}</font></b></text>
+          <text><b>Validating accuracy : <font color="blue">{{validatingAccuracy}}</font></b></text>
           <br>
           <div class="p-5 mb-1 bg-light rounded-3">
   
