建立一個 model_fig/__template_drt 存放範例圖片，才能在GET的時候，不會因為對應不到url_formodel_fig而出錯

--- a/templates/service.html
+++ b/templates/service.html
@@ -143,9 +143,6 @@
           <br><br>
 
 
-
-
-
           <label class="col-md-8 fs-5"></label>
           <label for="inference" class="btn btn-primary btn-lg">Inference</label>
           <input type="submit" id="inference" class="btn btn-primary btn-lg" hidden>
@@ -156,33 +153,47 @@
           <text><b>Testing accuracy : <font color="blue">{{0.95}}</font></b></text>
           <br>
           <div class="p-5 mb-1 bg-light rounded-3">
-  
+
+            <!-- <div class="gallery">
+              <a target="_blank" href="{{ url_for('static', path='/img/acc.png') }}">
+                <img src="{{ url_for('static', path='/img/acc.png') }}"  alt="Training Accuracy" width="600" height="400">
+              </a>
+              <div class="desc">Training Accuracy</div>
+            </div> -->
+
 
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('static', path='/img/acc.png') }}">
-                <img src="{{ url_for('static', path='/img/acc.png') }}" alt="Model Accuracy" width="600" height="400">
+              <a target="_blank" href="{{ url_for('model_fig', path='/Accuracy.png') }}">
+                <img src= "{{ url_for('model_fig', path='/Accuracy.png') }}"  alt="Training Accuracy" width="600" height="400">
               </a>
-              <div class="desc">Model Accuracy</div>
+              <div class="desc">Training Accuracy</div>
             </div>
             
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('static', path='/img/loss.png') }}">
-                <img src="{{ url_for('static', path='/img/loss.png') }}" alt="Forest" width="600" height="400">
+              <a target="_blank" href="{{ url_for('model_fig', path='/Loss.png') }}">
+                <img src= "{{ url_for('model_fig', path='/Loss.png') }}"  alt="Training Loss" width="600" height="400">
               </a>
-              <div class="desc">Model loss</div>
+              <div class="desc">Training Loss</div>
             </div>
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('static', path='/img/acc.png') }}">
-                <img src="{{ url_for('static', path='/img/acc.png') }}" alt="Model Accuracy" width="600" height="400">
+              <a target="_blank" href="{{ url_for('model_fig', path='/Nodes.png') }}">
+                <img src="{{ url_for('model_fig', path='/Nodes.png') }}"  alt="Model Nodes" width="600" height="400">
               </a>
-              <div class="desc">Model Accuracy</div>
+              <div class="desc">Model Nodes</div>
             </div>
             
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('static', path='/img/loss.png') }}">
-                <img src="{{ url_for('static', path='/img/loss.png') }}" alt="Forest" width="600" height="400">
+              <a target="_blank" href="{{ url_for('model_fig', path='/Pruned_nodes.png') }}">
+                <img src="{{ url_for('model_fig', path='/Pruned_nodes.png') }}"  alt="Pruned Nodes" width="600" height="400">
               </a>
-              <div class="desc">Model loss</div>
+              <div class="desc">Pruned Nodes</div>
+            </div>
+
+            <div class="gallery">
+              <a target="_blank" href="{{ url_for('model_fig', path='/Routes.png') }}">
+                <img src="{{ url_for('model_fig', path='/Routes.png') }}"  alt="Model Routes" width="600" height="400">
+              </a>
+              <div class="desc">Model Routes</div>
             </div>
             
           </div>
